Fix alignment of options on responses

--- a/ArticleTemplates/assets/scss/modules/blocks/_comment.scss
+++ b/ArticleTemplates/assets/scss/modules/blocks/_comment.scss
@@ -427,11 +427,11 @@ Comment preview:
         }
 
         @include mq(col2, col3) {
-            margin-left: cols($base-3, 4);
+            margin-left: cols($base-3, 4, 1);
         }
 
         @include mq($from: col3) {
-            margin-left: cols($base-4, 5);
+            margin-left: cols($base-4, 5, 1);
         }
     }
 }
